--- a/src/styles/pages/_proprietaires.scss
+++ b/src/styles/pages/_proprietaires.scss
@@ -4,6 +4,11 @@
     @include verticalCenter;
     flex-direction: column;
     height: $vh;
+    &--bubbles {
+      width: 100%;
+      @include verticalCenter;
+      flex-direction: column;
+    }
     h1 {
       display: inline-block;
       margin: 1rem auto 3rem;
@@ -19,45 +24,56 @@
         bottom: -0.8rem;
       }
     }
+    @include desktop {
+      height: auto;
+      justify-content: start;
+      h1 {
+        margin-top: 3rem;
+      }
+      &--bubbles {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 1rem;
+        justify-content: center;
+        width: 80%;
+        height: 40%;
+        margin-bottom: 2rem;
+      }
+    }
   }
   .intro-annexe {
-    &__description {
-      p {
-        font-size: 1rem;
-        line-height: 2rem;
-      }
-      @include tablet {
-        p {
-          font-size: 1.1rem;
-          line-height: 2.2rem;
+    &__bg-media {
+      h1 {
+        @include tablet {
+          font-size: 2.2rem;
+        }
+        @include laptop {
+          width: 100%;
+          font-size: 2.3rem;
         }
       }
+    }
+    &__description {
       @include laptop {
         padding: 4rem;
-        p {
-          line-height: 2.6rem;
-        }
       }
       @include desktop {
         padding: 6rem;
-        p {
+      }
+      p {
+        font-size: 1rem;
+        line-height: 2rem;
+        @include tablet {
+          font-size: 1.1rem;
+          line-height: 2.2rem;
+        }
+        @include laptop {
+          line-height: 2.6rem;
+        }
+        @include desktop {
           line-height: 3rem;
-          font-size: 1.2rem;
-        }
-      }
-    }
-    @include tablet {
-      &__bg-media {
-        h1 {
-          font-size: 2.2rem;
-        }
-      }
-    }
-    @include laptop {
-      &__bg-media {
-        h1 {
-          width: 100%;
-          font-size: 2.3rem;
+          font-size: 1.3 rem;
         }
       }
     }
